--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 #root {
-  height: 100vh;
+  /* height: 100vh;
+  height: 100vh; Fallback for browsers that do not support Custom Properties
+  height: calc(var(--vh, 1vh) * 100); */
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
 }
